# turbomcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  tarpaulin.toml
crates/turbomcp-auth/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-auth/src/: config.rs  error.rs  jwks.rs  lib.rs  resource_server.rs  validator.rs
crates/turbomcp-auth/src/client/: challenge.rs  discovery.rs  flow.rs  mod.rs  registration.rs  store.rs
crates/turbomcp-auth/src/jwt/: jwks.rs  validator.rs
crates/turbomcp-auth/src/oauth2/: client.rs  dcr.rs  http_client.rs  mod.rs  resource.rs
crates/turbomcp-auth/src/providers/: oauth2.rs
crates/turbomcp-auth/tests/: dpop_token_endpoint.rs  jwt_validation.rs  oauth_flow.rs
crates/turbomcp-cli/: Cargo.toml  README.md
crates/turbomcp-cli/src/: cli.rs  dev.rs  lib.rs  new.rs  transport.rs
crates/turbomcp-client/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-client/src/: cache.rs  client.rs  connection.rs  error.rs  handler.rs  handlers.rs  http.rs  lib.rs  prelude.rs  sampling.rs  stdio.rs
crates/turbomcp-client/tests/: negotiation_and_recovery.rs  request_meta_roundtrip.rs  round_trip.rs  tasks_legacy.rs  typed_surface.rs
crates/turbomcp-codec/: Cargo.toml  README.md
crates/turbomcp-codec/src/: lib.rs
crates/turbomcp-codegen/: Cargo.toml
crates/turbomcp-codegen/src/: main.rs  normalize.rs
crates/turbomcp-conformance/: Cargo.toml
crates/turbomcp-conformance/src/: lib.rs
crates/turbomcp-conformance/tests/: conformance.rs
crates/turbomcp-core/: Cargo.toml  README.md
crates/turbomcp-core/src/: cancellation.rs  context.rs  error.rs  handler.rs  identity.rs  jsonrpc.rs  lib.rs  marker.rs  meta.rs  protocol_version.rs  response.rs  router.rs  session.rs
crates/turbomcp-dpop/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-dpop/src/: lib.rs  proof.rs  types.rs
crates/turbomcp-ext-apps/: Cargo.toml  README.md
crates/turbomcp-ext-apps/src/: lib.rs
crates/turbomcp-ext-tasks/: Cargo.toml  README.md
crates/turbomcp-ext-tasks/src/: lib.rs  store.rs  subs.rs  wire.rs
crates/turbomcp-ext-tasks/tests/: augmentation.rs  extension_seam.rs  input_required.rs  notifications.rs
crates/turbomcp-grpc/: Cargo.toml  README.md
crates/turbomcp-grpc/src/: client.rs  convert.rs  lib.rs
crates/turbomcp-http/: Cargo.toml  README.md
crates/turbomcp-http/src/: lib.rs  transport.rs
crates/turbomcp-interop/: Cargo.toml
crates/turbomcp-interop/benches/: sdk_comparison.rs
crates/turbomcp-interop/src/: lib.rs
crates/turbomcp-interop/tests/: rmcp_interop.rs
crates/turbomcp-macros/: Cargo.toml  README.md
crates/turbomcp-macros/src/: lib.rs  server.rs  tool.rs
crates/turbomcp-macros/tests/: stdio_safety_tests.rs
crates/turbomcp-openapi/: Cargo.toml
crates/turbomcp-openapi/examples/: petstore.rs
crates/turbomcp-openapi/src/: handler.rs  lib.rs  parser.rs  provider.rs
crates/turbomcp-protocol/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-protocol/benches/: message_batch.rs
crates/turbomcp-protocol/src/: codec.rs  jsonrpc.rs  lib.rs  lock_free.rs  message.rs  methods.rs  neutral.rs  session.rs  state.rs  test_helpers.rs  utils.rs  validation.rs  version.rs  versioning.rs  zero_copy.rs
crates/turbomcp-protocol/tests/: mcp_compliance_comprehensive_tests.rs  mcp_compliance_validation_tests.rs  roundtrip.rs
crates/turbomcp-proxy/: Cargo.toml  README.md
crates/turbomcp-proxy/examples/: README.md  schema_export.rs  tcp_backend.rs  unix_socket_backend.rs
crates/turbomcp-proxy/src/: config.rs  error.rs  lib.rs
crates/turbomcp-proxy/tests/: comprehensive_tests.rs  integration_tests.rs
crates/turbomcp-server/: Cargo.toml  MIGRATION.md  README.md
crates/turbomcp-server/src/: adapter.rs  alias.rs  builder.rs  composite.rs  config.rs  context.rs  dispatcher.rs  extension.rs  inflight.rs  lib.rs  logging.rs  mrtr.rs  progress.rs  response.rs  router.rs  session.rs  subscriptions.rs  tasks.rs  traits.rs  visibility.rs
crates/turbomcp-server/tests/: bidi_elicitation.rs  cache_policy.rs  cancellation.rs  dispatch_invariants.rs  http_transport_spec.rs  legacy_session.rs  legacy_subscriptions.rs  legacy_tasks.rs  logging.rs  mrtr.rs  progress.rs  schema_method_parity.rs  state_seams.rs  subscriptions.rs  trace_context.rs
crates/turbomcp-service/: Cargo.toml  README.md
crates/turbomcp-service/src/: auth.rs  error.rs  lib.rs  mcp_headers.rs  middleware.rs  outbound.rs  ratelimit.rs  serve.rs  session.rs  transport.rs
crates/turbomcp-service/tests/: serve_concurrency.rs
crates/turbomcp-stdio/: Cargo.toml
crates/turbomcp-stdio/src/: transport.rs
crates/turbomcp-tcp/: Cargo.toml  README.md
crates/turbomcp-tcp/src/: transport.rs
crates/turbomcp-telemetry/: Cargo.toml  README.md
crates/turbomcp-telemetry/src/: attributes.rs  config.rs  init.rs  layer.rs  lib.rs  metrics.rs  otlp.rs  propagation.rs
crates/turbomcp-telemetry/tests/: span_capture.rs
crates/turbomcp-transport-http/: Cargo.toml  README.md
crates/turbomcp-transport-http/src/: lib.rs
crates/turbomcp-transport-http/tests/: accept_negotiation.rs  auth_http.rs  delete_session.rs  dual_stack.rs  http_endpoint.rs  post_sse.rs  rate_limit.rs  serve_socket.rs  sse_listen.rs
crates/turbomcp-transport-stdio/: Cargo.toml  README.md
crates/turbomcp-transport-stdio/src/: lib.rs  net.rs
crates/turbomcp-transport-stdio/tests/: end_to_end.rs
crates/turbomcp-transport-streamable/: Cargo.toml  README.md
crates/turbomcp-transport-streamable/src/: config.rs  session.rs  sse.rs  types.rs
crates/turbomcp-transport-traits/: Cargo.toml  README.md
crates/turbomcp-transport-traits/src/: error.rs  events.rs  lib.rs  message.rs  traits.rs  types.rs
crates/turbomcp-transport-ws/: Cargo.toml  README.md
crates/turbomcp-transport-ws/src/: lib.rs
crates/turbomcp-transport-ws/tests/: hardening.rs
demo/: COMPILATION_STATUS.md  Cargo.toml  MCP_SETUP.md  README.md  lmstudio-config.json
demo/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: codec_decode.rs  mcp_header_codec.rs  sonic_decode.rs  uri_template.rs
(+385 files in other folders)
