# Workspace-only Cargo.toml - main SDK is in crates/turbomcp

[workspace]
members = [
    "crates/turbomcp-types",             # v3.0: Unified types (THE source of truth)
    "crates/turbomcp-core",              # v3.0: no_std core types (foundation layer)
    "crates/turbomcp-transport-traits",  # v3.0: lean transport traits (foundation layer)
    "crates/turbomcp-stdio",             # v3.0: STDIO transport (extracted)
    "crates/turbomcp-http",              # v3.0: HTTP/SSE client transport (extracted)
    "crates/turbomcp-websocket",         # v3.0: WebSocket bidirectional transport (extracted)
    "crates/turbomcp-tcp",               # v3.0: TCP transport (extracted)
    "crates/turbomcp-unix",              # v3.0: Unix domain socket transport (extracted)
    "crates/turbomcp-protocol",
    "crates/turbomcp-transport",
    "crates/turbomcp-server",
    "crates/turbomcp-client",
    "crates/turbomcp-cli",
    "crates/turbomcp",
    "crates/turbomcp-macros",
    "crates/turbomcp-dpop",  # 2.0.0: Re-extracted for clean minimal build
    "crates/turbomcp-auth",  # 2.0.0: Extracted for clean minimal build
    "crates/turbomcp-proxy", # Phase 2: Universal MCP adapter/generator
    "crates/turbomcp-telemetry", # v3.0: OpenTelemetry integration
    "crates/turbomcp-grpc",      # v3.0: gRPC transport with tonic
    "crates/turbomcp-wasm",      # v3.0: WebAssembly bindings for browsers and WASI
    "crates/turbomcp-wasm-macros", # v3.0: WASM server proc macros
    "crates/turbomcp-wire",      # v3.0: Wire format codec abstraction
    "crates/turbomcp-openapi",   # v3.0: OpenAPI to MCP conversion
    "crates/turbomcp-transport-streamable", # v3.0: Streamable HTTP transport types
    "demo",
]
resolver = "2"

[workspace.lints.rust]
# Declare expected cfgs from feature-gated code in the #[server] macro
# (transport, authentication, etc.)
#
# When the #[server] macro generates code without explicit transport specification,
# it conditionally generates methods for all transports. This workspace-level
# declaration tells the compiler "yes, these cfg conditions are expected and valid".
#
# Users who explicitly specify transports via the macro:
#   #[server(name = "my-server", transports = ["stdio", "http"])]
# will only generate cfg guards for their specified transports.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(http)',
    'cfg(websocket)',
    'cfg(tcp)',
    'cfg(unix)',
    'cfg(auth)',
    'cfg(dpop)',
    'cfg(docsrs)',
] }

[workspace.lints.clippy]
# Quality enforcement - warn on missing documentation for error conditions
# This helps users understand what can go wrong when calling fallible functions
# TODO(v4.0.0): Consider changing to "deny" after comprehensive doc coverage
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
single_match_else = "allow"
match_same_arms = "allow"
similar_names = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
struct_excessive_bools = "allow"
uninlined_format_args = "allow"
# Allow test-specific patterns
assertions_on_constants = "allow"
const_is_empty = "allow"

[workspace.dependencies]
# Core async runtime and utilities
# Tokio: Production optimization - use only needed features instead of "full"
# Includes: runtime, networking, sync, timers, signal handling, process, macros, io
tokio = { version = "1.52", features = [
    "rt", "rt-multi-thread",  # Multi-threaded async runtime
    "net",                     # TCP/UDP networking
    "sync",                    # Channels, mutexes, RwLock
    "time",                    # Timeouts, delays, intervals
    "signal",                  # Signal handling (graceful shutdown)
    "process",                 # Child process spawning
    "macros",                  # #[tokio::main] macro
    "io-util",                 # Async I/O utilities
] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
futures = "0.3.32"
pin-project-lite = "0.2.17"

# Test utilities
walkdir = "2.5"
tempfile = "3.27"

# Serialization with performance focus
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value", "preserve_order"] }
msgpacker = { version = "0.7", features = ["derive"] }  # MessagePack for binary efficiency
sonic-rs = "0.5.8"   # High-performance JSON
simd-json = "0.17" # SIMD-accelerated JSON parsing
ciborium = "0.2"

# Schema validation and generation
schemars = { version = "1.2.1", features = ["chrono04", "uuid1"] }
jsonschema = { version = "0.46", default-features = false }

# HTTP/WebSocket/Network
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls", "http2", "brotli", "gzip", "form", "query"] }
axum = { version = "0.8.9", features = ["ws", "tracing", "macros"] }
tower = { version = "0.5.3", features = ["util", "retry", "timeout"] }
tower-http = { version = "0.6.8", features = ["compression-br", "compression-gzip", "cors", "timeout", "trace", "limit"] }
hyper = { version = "1.9", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto", "client-legacy"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }

# Error handling and diagnostics
thiserror = "2.0.18"
anyhow = "1.0.102"
miette = { version = "7.6", features = ["fancy"] }
color-eyre = "0.6.5"

# Observability and monitoring
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "tracing-log"] }
tracing-opentelemetry = "0.32.1"
tracing-appender = "0.2"  # File-based logging with non-blocking I/O
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Concurrency and synchronization
parking_lot = "0.12.5"
dashmap = "6.1.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5"
flume = "0.12"
tokio-stream = "0.1"

# URL and random utilities
url = "2.5.8"
fastrand = "2.4"

# Configuration and CLI
config = "0.15"
clap = { version = "4.6.1", features = ["derive", "env", "color"] }
clap_complete = "4.6"

# Security and authentication
ring = "0.17.14"
subtle = "2.6"  # Constant-time comparison for secret values
base64 = "0.22.1"
percent-encoding = "2.3.2"  # URL percent encoding/decoding (RFC 3986)
uuid = { version = "1.23", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs", "use_pem"] }

# Time and date handling
chrono = { version = "0.4.44", features = ["serde"] }
time = { version = "0.3.47", features = ["serde", "macros"] }

# Memory and performance optimizations
bytes = "1.11.1"
smallvec = { version = "1.15", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }
ahash = "0.8.12"
arc-swap = "1.9"

# Caching
moka = { version = "0.12.15", features = ["future"] }

# Rate limiting (lock-free GCRA, replaces hand-rolled token bucket / sliding window)
governor = "0.10.4"

# Retry/backoff (replaces hand-rolled exponential backoff loops)
backon = { version = "1.6.0", features = ["tokio-sleep"] }

# Serde extensions
serde_with = "3.18"

# Development and testing
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11"
tokio-test = "0.4"
wiremock = "0.6.5"
pretty_assertions = "1.4.1"
insta = { version = "1.47", features = ["json", "redactions"] }
rand = "0.10"
quickcheck = "1.1"
quickcheck_macros = "1.2"
mock_instant = "0.6"
serial_test = "3.4"
sha2 = "0.11"
testcontainers = "0.27"

# Documentation
doc-comment = "0.3"

# Workspace dependencies are defined below
# Internal crate dependencies - v3.0.0
#
# NOTE on `default-features = false`:
# - turbomcp-core: Has `default = ["std"]` - needed for no_std/WASM builds
# - turbomcp-wire: Has `default = ["std", "json"]` - needed for no_std builds
# - turbomcp-transport: Has `default = ["stdio"]` - needed because turbomcp-client
#   uses `default-features = false` to control transport selection via its own features
#
# All other crates either have empty defaults (removed vestigial `default-features = false`)
# or useful defaults that should be enabled by default.
turbomcp = { version = "3.1.2", path = "crates/turbomcp" }
# v3.0: turbomcp-types is THE source of truth for all MCP types
turbomcp-types = { version = "3.1.2", path = "crates/turbomcp-types" }
# v3.0: turbomcp-core re-extracted as no_std foundation layer
turbomcp-core = { version = "3.1.2", path = "crates/turbomcp-core", default-features = false }
# v3.0: turbomcp-transport-traits lean transport traits crate
turbomcp-transport-traits = { version = "3.1.2", path = "crates/turbomcp-transport-traits" }
# v3.0: Individual transport crates (extracted from monolithic turbomcp-transport)
turbomcp-stdio = { version = "3.1.2", path = "crates/turbomcp-stdio" }
turbomcp-http = { version = "3.1.2", path = "crates/turbomcp-http" }
turbomcp-websocket = { version = "3.1.2", path = "crates/turbomcp-websocket" }
turbomcp-tcp = { version = "3.1.2", path = "crates/turbomcp-tcp" }
turbomcp-unix = { version = "3.1.2", path = "crates/turbomcp-unix" }
turbomcp-protocol = { version = "3.1.2", path = "crates/turbomcp-protocol" }
turbomcp-transport = { version = "3.1.2", path = "crates/turbomcp-transport", default-features = false }
turbomcp-client = { version = "3.1.2", path = "crates/turbomcp-client" }
turbomcp-server = { version = "3.1.2", path = "crates/turbomcp-server" }
turbomcp-macros = { version = "3.1.2", path = "crates/turbomcp-macros" }
turbomcp-cli = { version = "3.1.2", path = "crates/turbomcp-cli" }
turbomcp-telemetry = { version = "3.1.2", path = "crates/turbomcp-telemetry" }
turbomcp-auth = { version = "3.1.2", path = "crates/turbomcp-auth" }
turbomcp-dpop = { version = "3.1.2", path = "crates/turbomcp-dpop" }
turbomcp-proxy = { version = "3.1.2", path = "crates/turbomcp-proxy" }
turbomcp-grpc = { version = "3.1.2", path = "crates/turbomcp-grpc" }
turbomcp-openapi = { version = "3.1.2", path = "crates/turbomcp-openapi" }
turbomcp-wire = { version = "3.1.2", path = "crates/turbomcp-wire", default-features = false }
turbomcp-wasm = { version = "3.1.2", path = "crates/turbomcp-wasm" }
turbomcp-wasm-macros = { version = "3.1.2", path = "crates/turbomcp-wasm-macros" }
turbomcp-transport-streamable = { version = "3.1.2", path = "crates/turbomcp-transport-streamable", default-features = false }

[profile.dev]
opt-level = 1
debug = "line-tables-only"  # Full backtraces but ~60% smaller debug info vs debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# CI-optimized profile for disk space constrained environments
[profile.ci]
inherits = "release"
opt-level = "s"  # Optimize for size
lto = "thin"     # Thin LTO uses less disk space
codegen-units = 16  # More units = less memory but parallel builds
debug = false    # No debug info to save space
strip = true     # Strip symbols
panic = "abort"  # Smaller binaries

# WASM-optimized profile for smallest binary size
[profile.wasm-release]
inherits = "release"
opt-level = "z"      # Aggressive size optimization
lto = "fat"          # Full LTO for maximum size reduction
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Smaller panic handling
strip = true         # Strip all symbols

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.test]
opt-level = 1
debug = "line-tables-only"

# Examples are in the individual crates
# Note: Workspace-level benchmarks are in benches/ directory
# Run with: ./scripts/run_benchmarks.sh

# Dependency advisory notes:
#
# paste v1.0.15 (RUSTSEC-2024-0436):
#   - unmaintained but compile-time only (zero runtime risk)
#   - Cannot patch to pastey due to package name mismatch in Cargo's patch mechanism
#   - Tracked upstream: https://github.com/parallaxsecond/rust-cryptoki/issues/279
