# Workspace-only Cargo.toml - main SDK is in crates/turbomcp

[workspace]
members = [
    "crates/turbomcp-core",
    "crates/turbomcp-protocol",
    "crates/turbomcp-codec",
    "crates/turbomcp-service",
    "crates/turbomcp-server",
    "crates/turbomcp-client",
    "crates/turbomcp-transport-stdio",
    "crates/turbomcp-transport-http",
    "crates/turbomcp-transport-ws",
    "crates/turbomcp-macros",
    "crates/turbomcp-codegen",
    "crates/turbomcp-auth",
    "crates/turbomcp-telemetry",
    "crates/turbomcp-ext-tasks",
    "crates/turbomcp-ext-apps",
    "crates/turbomcp",
]
# Cross-SDK interop suite. Excluded from the workspace so rmcp's large dependency
# tree never touches the main lockfile/gate; it carries its own lockfile and is
# run on its own (`cd crates/turbomcp-interop && cargo test`).
exclude = ["crates/turbomcp-interop"]
resolver = "2"

[workspace.lints.rust]
# Declare expected cfgs from feature-gated code in the #[server] macro
# (transport, authentication, etc.)
#
# When the #[server] macro generates code without explicit transport specification,
# it conditionally generates methods for all transports. This workspace-level
# declaration tells the compiler "yes, these cfg conditions are expected and valid".
#
# Users who explicitly specify transports via the macro:
#   #[server(name = "my-server", transports = ["stdio", "http"])]
# will only generate cfg guards for their specified transports.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(http)',
    'cfg(websocket)',
    'cfg(tcp)',
    'cfg(unix)',
    'cfg(auth)',
    'cfg(dpop)',
    'cfg(docsrs)',
] }

[workspace.lints.clippy]
# Quality enforcement - warn on missing documentation for error conditions
# This helps users understand what can go wrong when calling fallible functions
# TODO(v4.0.0): Consider changing to "deny" after comprehensive doc coverage
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
single_match_else = "allow"
match_same_arms = "allow"
similar_names = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
struct_excessive_bools = "allow"
uninlined_format_args = "allow"
# Allow test-specific patterns
assertions_on_constants = "allow"
const_is_empty = "allow"

[workspace.dependencies]
# Core async runtime and utilities
# Tokio: Production optimization - use only needed features instead of "full"
# Includes: runtime, networking, sync, timers, signal handling, process, macros, io
tokio = { version = "1.52", features = [
    "rt", "rt-multi-thread",  # Multi-threaded async runtime
    "net",                     # TCP/UDP networking
    "sync",                    # Channels, mutexes, RwLock
    "time",                    # Timeouts, delays, intervals
    "signal",                  # Signal handling (graceful shutdown)
    "process",                 # Child process spawning
    "macros",                  # #[tokio::main] macro
    "io-util",                 # Async I/O utilities
] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
futures = "0.3.32"
pin-project-lite = "0.2.17"

# Test utilities
walkdir = "2.5"
tempfile = "3.27"

# Serialization with performance focus
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value", "preserve_order"] }
msgpacker = { version = "0.7", features = ["derive"] }  # MessagePack for binary efficiency
sonic-rs = "0.5.8"   # High-performance JSON
simd-json = "0.17" # SIMD-accelerated JSON parsing
ciborium = "0.2"

# Schema validation and generation
schemars = { version = "1.2.1", features = ["chrono04", "uuid1"] }
jsonschema = { version = "0.46", default-features = false }

# HTTP/WebSocket/Network
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "rustls", "http2", "brotli", "gzip", "form", "query"] }
eventsource-stream = "0.2.3"
axum = { version = "0.8.9", features = ["ws", "tracing", "macros"] }
tower = { version = "0.5.3", features = ["util", "retry", "timeout"] }
tower-http = { version = "0.6.9", features = ["compression-br", "compression-gzip", "cors", "timeout", "trace", "limit"] }
hyper = { version = "1.9", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto", "client-legacy"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }

# Error handling and diagnostics
thiserror = "2.0.18"
async-trait = "0.1.89"
anyhow = "1.0.102"
miette = { version = "7.6", features = ["fancy"] }
color-eyre = "0.6.5"

# Observability and monitoring
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "tracing-log"] }
tracing-opentelemetry = "0.32.1"
tracing-appender = "0.2"  # File-based logging with non-blocking I/O
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tonic", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.3"

# Concurrency and synchronization
parking_lot = "0.12.5"
dashmap = "6.1.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5"
flume = "0.12"
tokio-stream = "0.1"

# URL and random utilities
url = "2.5.8"
fastrand = "2.4"

# Configuration and CLI
config = "0.15"
clap = { version = "4.6.1", features = ["derive", "env", "color"] }
clap_complete = "4.6"

# Security and authentication
ring = "0.17.14"
subtle = "2.6"  # Constant-time comparison for secret values
hmac = "0.13"   # HMAC (pairs with sha2 0.11 / digest 0.11)
base64 = "0.22.1"
percent-encoding = "2.3.2"  # URL percent encoding/decoding (RFC 3986)
uuid = { version = "1.23", features = ["v4", "serde"] }
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs", "use_pem"] }

# Time and date handling
chrono = { version = "0.4.44", features = ["serde"] }
time = { version = "0.3.47", features = ["serde", "macros"] }

# Memory and performance optimizations
bytes = "1.11.1"
smallvec = { version = "1.15", features = ["serde"] }
compact_str = { version = "0.9", features = ["serde"] }
ahash = "0.8.12"
arc-swap = "1.9"

# Caching
moka = { version = "0.12.15", features = ["future"] }

# Rate limiting (lock-free GCRA, replaces hand-rolled token bucket / sliding window)
governor = "0.10.4"

# Retry/backoff (replaces hand-rolled exponential backoff loops)
backon = { version = "1.6.0", features = ["tokio-sleep"] }

# Serde extensions
serde_with = "3.19"

# Development and testing
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11"
tokio-test = "0.4"
wiremock = "0.6.5"
pretty_assertions = "1.4.1"
insta = { version = "1.47", features = ["json", "redactions"] }
rand = "0.10"
quickcheck = "1.1"
quickcheck_macros = "1.2"
mock_instant = "0.6"
serial_test = "3.4"
sha2 = "0.11"
testcontainers = "0.27"

# Documentation
doc-comment = "0.3"

# Internal workspace crate dependencies.
# `default-features = false` on turbomcp-core / turbomcp-protocol keeps the
# no_std/WASM foundation portable (their `default = ["std"]` is opt-in per crate).
turbomcp = { version = "4.0.0-alpha.1", path = "crates/turbomcp" }
turbomcp-core = { version = "4.0.0-alpha.1", path = "crates/turbomcp-core", default-features = false }
turbomcp-protocol = { version = "4.0.0-alpha.1", path = "crates/turbomcp-protocol", default-features = false }
turbomcp-codec = { version = "4.0.0-alpha.1", path = "crates/turbomcp-codec" }
turbomcp-service = { version = "4.0.0-alpha.1", path = "crates/turbomcp-service" }
turbomcp-server = { version = "4.0.0-alpha.1", path = "crates/turbomcp-server" }
turbomcp-client = { version = "4.0.0-alpha.1", path = "crates/turbomcp-client" }
turbomcp-transport-stdio = { version = "4.0.0-alpha.1", path = "crates/turbomcp-transport-stdio" }
turbomcp-transport-http = { version = "4.0.0-alpha.1", path = "crates/turbomcp-transport-http" }
turbomcp-transport-ws = { version = "4.0.0-alpha.1", path = "crates/turbomcp-transport-ws" }
turbomcp-macros = { version = "4.0.0-alpha.1", path = "crates/turbomcp-macros" }
turbomcp-auth = { version = "4.0.0-alpha.1", path = "crates/turbomcp-auth" }
turbomcp-telemetry = { version = "4.0.0-alpha.1", path = "crates/turbomcp-telemetry" }
turbomcp-ext-tasks = { version = "4.0.0-alpha.1", path = "crates/turbomcp-ext-tasks" }
turbomcp-ext-apps = { version = "4.0.0-alpha.1", path = "crates/turbomcp-ext-apps" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"  # Full backtraces but ~60% smaller debug info vs debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# CI-optimized profile for disk space constrained environments
[profile.ci]
inherits = "release"
opt-level = "s"  # Optimize for size
lto = "thin"     # Thin LTO uses less disk space
codegen-units = 16  # More units = less memory but parallel builds
debug = false    # No debug info to save space
strip = true     # Strip symbols
panic = "abort"  # Smaller binaries

# WASM-optimized profile for smallest binary size
[profile.wasm-release]
inherits = "release"
opt-level = "z"      # Aggressive size optimization
lto = "fat"          # Full LTO for maximum size reduction
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Smaller panic handling
strip = true         # Strip all symbols

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.test]
opt-level = 1
debug = "line-tables-only"

# Examples are in the individual crates
# Note: Workspace-level benchmarks are in benches/ directory
# Run with: ./scripts/run_benchmarks.sh

# Dependency advisory notes:
#
# paste v1.0.15 (RUSTSEC-2024-0436):
#   - unmaintained but compile-time only (zero runtime risk)
#   - Cannot patch to pastey due to package name mismatch in Cargo's patch mechanism
#   - Tracked upstream: https://github.com/parallaxsecond/rust-cryptoki/issues/279
