[package]
name = "turbomcp-demo"
version = "3.1.4"
edition = "2024"
license = "MIT"
description = "Demo project showcasing TurboMCP v3 architecture"
publish = false

[dependencies]
# TurboMCP SDK with v3 macros
# NOTE: Using path dependencies for demo. For production, use versioned dependencies:
#   turbomcp = { version = "3.1.4", features = [...] }
turbomcp = { path = "../crates/turbomcp" }

# Async runtime
tokio = { workspace = true }

# Date/time for demo
chrono = { version = "0.4", features = ["serde"] }
