[package]
name = "turbomcp-auth"

version = "3.1.3"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "OAuth 2.1 and authentication for TurboMCP with MCP protocol compliance"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
documentation = "https://docs.rs/turbomcp-auth"
readme = "README.md"
keywords = ["oauth", "authentication", "mcp", "security", "api-key"]
categories = ["authentication", "web-programming", "network-programming"]
rust-version = "1.89.0"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# OAuth 2.1 dependencies
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
urlencoding = "2.1"
url = "2.5"

# HTTP types
http = "1.4"

# Tower integration (optional)
tower = { workspace = true, optional = true }
tower-service = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# Time handling
chrono = { workspace = true }

# UUID for session/token management
uuid = { workspace = true, features = ["v4", "v7", "serde"] }

# Secret management
secrecy = { version = "0.10", features = ["serde"] }

# Cryptography
subtle = "2.6"
blake3 = "1.8"

# Token validation cache (replaces lru due to RUSTSEC-2026-0002 unsoundness)
moka = { workspace = true }

# GCRA rate limiting (lock-free, replaces hand-rolled sliding-window)
governor = { workspace = true }
dashmap = { workspace = true }

# Serde extensions (OneOrMany for JWT aud field)
serde_with = { workspace = true }

# HTTP client for OAuth flows
reqwest = { workspace = true }

# (dashmap is now always-on above; CIMD features depend on it but no longer opt-in.)

# Internal dependencies
turbomcp-protocol = { workspace = true }
turbomcp-dpop = { workspace = true, optional = true }

# Observability (optional)
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[features]
# Default features - minimal but useful
default = ["api-key", "oauth2"]

# Core authentication methods
api-key = []                                    # API key authentication
jwt = []                                        # JWT validation (uses jsonwebtoken via oauth2 for now)
oauth2 = []                                     # OAuth 2.1 flows (currently always enabled via hard deps)
custom = []                                     # Custom auth provider support (just traits)

# Advanced features
dpop = ["dep:turbomcp-dpop"]                    # RFC 9449 DPoP token binding
rbac = []                                       # Role-based access control helpers

# Token lifecycle
token-refresh = []                              # Automatic token refresh
token-revocation = []                           # Token revocation support

# Observability
metrics = ["dep:metrics"]                       # Metrics collection (counters, histograms)
tracing-ext = []                                # Extended tracing (already have tracing as hard dep)

# Middleware / Tower integration
middleware = ["dep:tower", "dep:tower-service", "dep:futures-util", "dep:pin-project-lite"]  # Tower middleware support
tower = ["middleware"]  # Alias for middleware (for consistency with other turbomcp crates)

# MCP 2025-11-25 Draft Specification Features (Authorization)
mcp-ssrf = []                               # SSRF protection for HTTP fetching (used by CIMD and Discovery)
mcp-cimd = ["mcp-ssrf"]                     # Client ID Metadata Documents (SEP-991)
mcp-oidc-discovery = ["mcp-ssrf"]           # OpenID Connect Discovery 1.0 support (RFC 8414 + OIDC)
mcp-incremental-consent = []                # Incremental scope consent via WWW-Authenticate (SEP-835)

# Batteries-included
full = [
    "api-key", "jwt", "oauth2", "custom",
    "dpop", "rbac",
    "token-refresh", "token-revocation",
    "metrics", "tracing-ext", "middleware",
    "mcp-cimd", "mcp-oidc-discovery", "mcp-incremental-consent"
]

[[example]]
name = "tower_rate_limiting"
required-features = ["middleware"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
