[package]
name = "turbomcp-auth"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 auth: OAuth 2.1 resource-server (bearer-token validation, RFC 9728 metadata)."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[features]
default = []
# Live JWKS fetching over HTTP (pulls in reqwest + a tokio runtime). Without
# it, supply keys via `StaticJwks` (or implement `JwkSource` yourself).
http-jwks = ["dep:reqwest", "dep:tokio"]
# The OAuth 2.1 *client* half: authorization-code + PKCE flows, RFC 9728/8414
# discovery, client registration (CIMD / pre-registered / DCR), RFC 9207 iss
# validation, issuer-keyed credential store.
oauth-client = ["dep:oauth2", "dep:reqwest", "dep:tokio", "dep:url"]

[dependencies]
turbomcp-core = { workspace = true }
turbomcp-service = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time"], optional = true }
oauth2 = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
base64 = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
