[package]
name = "turbomcp-cli"

version = "3.1.2"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "Command-line tools for managing and testing MCP servers"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "cli", "tools", "testing", "management"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
# Core TurboMCP
turbomcp-client = { workspace = true }
turbomcp-transport = { workspace = true }
turbomcp-protocol = { workspace = true }

# CLI framework
clap = { workspace = true, features = ["derive", "env", "string"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_norway = "0.9"

# Async runtime
tokio = { workspace = true }

# Legacy transports (for backward compatibility - will be removed in v2.0)
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

# Output formatting
comfy-table = "7.2"
owo-colors = "4.3"
indicatif = "0.18"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config
config = { workspace = true }
dirs = "6.0"

# Honor shell quoting / escaping when splitting `--command` into argv
shell-words = "1.1"

# Cross-platform PATH lookup (replaces shelling out to `which`)
which = "8.0"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
# Transport features - enable individual transports as needed
default = ["stdio", "tcp", "unix"]
stdio = ["turbomcp-transport/stdio"]
tcp = ["turbomcp-transport/tcp"]
unix = ["turbomcp-transport/unix"]
http = ["turbomcp-transport/http"]
websocket = ["turbomcp-transport/websocket"]
# Convenience: enable all transports
all = ["stdio", "tcp", "unix", "http", "websocket"]

[[bin]]
name = "turbomcp-cli"
path = "src/main.rs"
