[package]
name = "turbomcp-client"

version = "3.1.4"

edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "MCP client with full protocol support, bidirectional communication, and plugin middleware"
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
keywords = ["mcp", "client", "connection", "recovery", "async"]
categories = ["development-tools", "network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.89.0"

[dependencies]
turbomcp-protocol = { workspace = true }
turbomcp-transport = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# LLM backend integration
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# Plugin system dependencies (legacy)
chrono = { workspace = true, features = ["serde"] }
# LLM integration dependencies
futures = { workspace = true }

# Tower middleware (v3.0 - always enabled)
tower = { workspace = true }
tower-service = "0.3"
tower-layer = "0.3"
futures-util = "0.3"
parking_lot = "0.12"

[dev-dependencies]
bytes = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["stdio"]

# Transport features (pass-through to turbomcp-transport)
stdio = ["turbomcp-transport/stdio"]
http = ["turbomcp-transport/http"]
websocket = ["turbomcp-transport/websocket"]
tcp = ["turbomcp-transport/tcp"]
unix = ["turbomcp-transport/unix"]

# Experimental features (pass-through to turbomcp-protocol)
experimental-tasks = ["turbomcp-protocol/experimental-tasks"]
