[package]
name = "turbomcp-client"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.88"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 client: ClientBuilder, ConnectMode probe, MRTR loop, cache layer."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"

[features]
# The Streamable HTTP client transport (reqwest + SSE). Off by default; stdio
# needs no extra deps.
http = ["dep:reqwest", "dep:eventsource-stream", "dep:futures"]

[dependencies]
turbomcp-core = { workspace = true, features = ["std"] }
turbomcp-protocol = { workspace = true }
turbomcp-codec = { workspace = true }
turbomcp-service = { workspace = true }
turbomcp-transport-stdio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "process", "io-util", "macros"] }
reqwest = { workspace = true, optional = true }
eventsource-stream = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
turbomcp-server = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util"] }

[package.metadata.docs.rs]
all-features = true
