[package]
name = "turbomcp-codegen"
version = "4.0.0-alpha.1"
edition = "2024"
rust-version = "1.85"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "TurboMCP v4 codegen: MCP schema JSON -> checked-in Rust wire types (typify). Not in the user dep graph."
license = "MIT"
repository = "https://github.com/Epistates/turbomcp"
homepage = "https://turbomcp.org"
publish = false

[[bin]]
name = "turbomcp-codegen"
path = "src/main.rs"

[dependencies]
# typify pulls its own schemars 0.8; we deserialize RootSchema with the matching
# version. NOT `workspace = true` (the workspace pins schemars 1.x for runtime).
typify = "0.6"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
# preserve_order keeps generated output stable/reviewable across runs.
serde_json = { version = "1", features = ["preserve_order"] }
prettyplease = "0.2"
syn = { version = "2", features = ["full", "parsing"] }
anyhow = { workspace = true }
